--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,34 @@
-selenium==4.1.3
-numpy==1.22.3
-wasm==1.2
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-generator==1.10
+async-timeout==4.0.2
+attrs==21.4.0
+beautifulsoup4==4.10.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cryptography==36.0.2
+frozenlist==1.3.0
 graphviz==0.19.1
+h11==0.13.0
+idna==3.3
+multidict==6.0.2
+numpy==1.22.3
+outcome==1.1.0
+pycparser==2.21
+pydot==1.4.2
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
+PySocks==1.7.1
+requests==2.27.1
+selenium==4.1.3
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+trio==0.20.0
+trio-websocket==0.9.2
+urllib3==1.26.8
+vt-py==0.14.0
+wasm==1.2
+wsproto==1.1.0
+yarl==1.7.2
