--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pyparsing==3.0.7
 PySocks==1.7.1
 requests==2.27.1
 selenium==4.1.3
+selenium-wire==4.6.3
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
@@ -31,5 +32,6 @@ trio-websocket==0.9.2
 urllib3==1.26.8
 vt-py==0.14.0
 wasm==1.2
+webdriver-manager==3.5.4
 wsproto==1.1.0
 yarl==1.7.2
