--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ async-generator==1.10
 async-timeout==4.0.2
 attrs==21.4.0
 beautifulsoup4==4.10.0
+blinker==1.4
+Brotli==1.0.9
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -11,10 +13,15 @@ cryptography==36.0.2
 frozenlist==1.3.0
 graphviz==0.19.1
 h11==0.13.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
 idna==3.3
+kaitaistruct==0.9
 multidict==6.0.2
 numpy==1.22.3
 outcome==1.1.0
+pyasn1==0.4.8
 pycparser==2.21
 pydot==1.4.2
 pyfiglet==0.8.post1
@@ -34,4 +41,6 @@ vt-py==0.14.0
 wasm==1.2
 webdriver-manager==3.5.4
 wsproto==1.1.0
+yara==1.7.7
 yarl==1.7.2
+zstandard==0.17.0
