--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ kaitaistruct==0.9
 multidict==6.0.2
 numpy==1.22.3
 outcome==1.1.0
+pip-autoremove==0.10.0
 pyasn1==0.4.8
 pycparser==2.21
 pydot==1.4.2
@@ -41,6 +42,6 @@ vt-py==0.14.0
 wasm==1.2
 webdriver-manager==3.5.4
 wsproto==1.1.0
-yara==1.7.7
+yara-python==4.2.0
 yarl==1.7.2
 zstandard==0.17.0
